--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,41 +1,51 @@
 .header {
   background-color: #a4143b;
   color: #f9f3e3;
-  font-family: 'Source Sans Pro', sans-serif;
-  width: 100%;
   top: 0;
   left: 0;
+  right: 0;
   padding: 10px;
-  margin-top: -10px;
   position: fixed;
   background-size: cover;
-  display: inline-block;
 }
 
 .title {
 	font-size: 40px;
-	margin-top: 0px;
+	margin-top: 30px;
 }
 
 .subtitle {
 	font-size: 20px;
-	margin-top: -20px;
+	margin-top: -25px;
 	margin-bottom: 10px;
 }
 
+.content-divider {
+	padding-top: 140px;
+}
+
 .photo-viewer {
-	margin-top: 100px;
-	margin-right: -10px;
-	height: 400px;
-	width: 50%;
+	width: 100%;
+	height: 70vh;
+	margin: 0 auto;
+	display: inline-block;
+
+}
+
+.photo-container {
 	float: left;
+	width: 48%;
+	margin: 0;
+	padding: 0;
 }
 
 .target-photo {
-	max-height: 100%;
+	margin: 0;
+	padding: 0;
+	max-height: 70vh;
 	max-width: 100%;
-	margin: auto;
-	display: block;
+	display: inline-block;
+
 }
 
 .target-photo:focus {
@@ -43,23 +53,30 @@
 }
 
 .photo-content {
-	float: left;
-	display: inline-block;
-	margin-top: 100px;
+	width: 42%;
+	float: right;
+	margin-right: 10px;
 	margin-left: 20px;
+	padding-right: 0;
+	display: inline-block;
+
+}
+
+.photo-location {
+	font-size: 20px;
 }
 
 .photo-map {
-	margin-top: 40px;
-	margin-left: 20px;
 	max-height: 400px;
-	max-width: 400px;
+	max-width: 100%;
 	border: 1px solid white;
+	margin-top: 15px;
+	display: inline-block;
+
 }
 
 .photo-library {
 	margin-top: 20px;
-	display:inline-block;
 }
 
 .photo-entry {
