fix photo viewer css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <h1 class="title">EriSnap</h1>
-  <h3 class="subtitle">Black and Whites from Summer 2007</h3>
+  <h3 class="subtitle">Black and Whites from 2007</h3>
 </header>
 <div class="content-divider"></div>
 
