--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,7 +26,7 @@
 
 .photo-viewer {
 	width: 100%;
-	height: 70vh;
+	height: 20%;
 	margin: 0 auto;
 	display: inline-block;
 
@@ -34,7 +34,7 @@
 
 .photo-container {
 	float: left;
-	width: 48%;
+	width: 50%;
 	margin: 0;
 	padding: 0;
 }
@@ -45,7 +45,6 @@
 	max-height: 70vh;
 	max-width: 100%;
 	display: inline-block;
-
 }
 
 .target-photo:focus {
@@ -54,25 +53,39 @@
 
 .photo-content {
 	width: 42%;
-	float: right;
 	margin-right: 10px;
 	margin-left: 20px;
 	padding-right: 0;
 	display: inline-block;
-
 }
 
 .photo-location {
 	font-size: 20px;
+	width: 100%;
 }
 
 .photo-map {
-	max-height: 400px;
-	max-width: 100%;
-	border: 1px solid white;
-	margin-top: 15px;
-	display: inline-block;
+	display: none;
+}
 
+@media screen and (min-width: 768px){
+	.photo-map{
+		max-height: 400px;
+		max-width: 100%;
+		border: 1px solid white;
+		margin-top: 15px;
+		display: inline-block;
+	}
+}
+
+@media screen and (max-width: 768px){
+	.photo-container {
+		width: 100%;
+	}
+
+	.photo-content {
+		width: 100%;
+	}
 }
 
 .photo-library {
